feat(client): skill tooltip
